Desktop version of the home page

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -7,7 +7,18 @@
 @import './call';
 @import './phone';
 @import './pull';
+@import './section.name';
+@import './btn';
+@import './news.names';
+@import './news.carousel';
 
 @import './frames/wrapper';
 @import './frames/header';
 @import './frames/slider';
+@import './frames/categories';
+@import './frames/investments';
+@import './frames/programs';
+@import './frames/news';
+@import './frames/rule.making';
+@import './frames/partners';
+@import './frames/footer';
