--- a/dev/include/scripts.html
+++ b/dev/include/scripts.html
@@ -5,4 +5,10 @@
 <!-- build:js js/slick.js -->
 <script src="../node_modules/slick-carousel/slick/slick.js"></script>
 <!-- endbuild -->
+<!-- build:js js/fancybox.js -->
+<script src="../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.js"></script>
+<!-- endbuild -->
+<!-- build:js js/maskedinput.js -->
+<script src="../node_modules/jquery.maskedinput/src/jquery.maskedinput.js"></script>
+<!-- endbuild -->
 <script src="js/scripts.js"></script>
