--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -11,6 +11,9 @@
 @import './btn';
 @import './news.names';
 @import './news.carousel';
+@import './main.nav';
+@import './modal';
+@import './form';
 
 @import './frames/wrapper';
 @import './frames/header';
