--- a/dev/include/head.html
+++ b/dev/include/head.html
@@ -19,4 +19,7 @@
 <!-- build:css css/slick.css -->
 <link rel="stylesheet" href="../node_modules/slick-carousel/slick/slick.css">
 <!-- endbuild -->
+<!-- build:css css/fancybox.css -->
+<link rel="stylesheet" href="../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.css">
+<!-- endbuild -->
 <link rel="stylesheet" href="css/styles.css">
