--- a/dev/scss/_default.scss
+++ b/dev/scss/_default.scss
@@ -56,11 +56,17 @@ h6,
 }
 h1,
 .h1 {
-  font-size: 36px;
+  font-size: 28px;
+  @media screen and (min-width: 600px) {
+    font-size: 36px;
+  }
 }
 h2,
 .h2 {
-  font-size: 32px;
+  font-size: 26px;
+  @media screen and (min-width: 600px) {
+    font-size: 32px;
+  }
 }
 h3,
 .h3 {
@@ -137,4 +143,13 @@ input::-ms-clear {
   & > div {
     outline: none;
   }
+}
+.fancybox-slide--html {
+  padding: 15px;
+}
+.fancybox-bg {
+  background: rgba(0, 0, 0, 0.31);
+}
+.fancybox-is-open .fancybox-bg {
+  opacity: 1;
 }
