--- a/dev/scss/_news.carousel.scss
+++ b/dev/scss/_news.carousel.scss
@@ -1,13 +1,18 @@
 .news-carousel {
   display: none;
   position: relative;
-  margin: 0 -15px;
+  @media screen and (min-width: 990px) {
+    margin: 0 -15px;
+  }
   &__item {
     display: block!important;
     width: 100%!important;
-    padding: 0 15px;
+    padding: 0 7.5px;
     opacity: 0.7;
     @include transition;
+    @media screen and (min-width: 600px) {
+      padding: 0 15px;
+    }
     .slick-current & {
       opacity: 1;
     }
@@ -16,25 +21,91 @@
     display: block;
     text-decoration: none;
     position: relative;
+    width: 100%;
+    @media screen and (min-width: 600px) {
+      width: 535px;
+    }
+    @media screen and (min-width: 990px) {
+      width: auto;
+    }
     @media screen and (min-width: 1200px) {
       width: 535px;
+    }
+    &:before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      @include transition;
+      opacity: 0;
+      z-index: 2;
+      background: linear-gradient(to bottom, rgba(9,28,71,0) 0%,rgba(9,28,71,1) 100%);
+      @media screen and (min-width: 990px) {
+        display: none;
+      }
+    }
+  }
+  .slick-current &__item-link {
+    &:before {
+      opacity: 1;
     }
   }
   &__item-label {
     position: absolute;
-    left: 18px;
-    top: 22px;
+    left: 15px;
+    top: 15px;
     text-align: center;
-    padding: 9px 5px;
+    padding: 5px;
     background: rgba(255, 255, 255, 0.46);
     color: $color-white;
     text-transform: uppercase;
-    font-size: 16px;
-    line-height: 16px;
-    min-width: 63px;
+    font-size: 14px;
+    line-height: 14px;
+    min-width: 50px;
+    z-index: 4;
+    @media screen and (min-width: 480px) {
+      font-size: 16px;
+      line-height: 16px;
+      min-width: 63px;
+      padding: 9px 5px;
+    }
+    @media screen and (min-width: 990px) {
+      left: 18px;
+      top: 22px;
+    }
   }
   &__item-img {
     max-width: none;
     width: 100%;
+  }
+  &__item-name {
+    font: $bold 14px / 18px $font;
+    text-transform: uppercase;
+    color: $color-white;
+    margin: 0;
+    padding: 15px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    opacity: 0;
+    @include transition;
+    z-index: 3;
+    @media screen and (min-width: 480px) {
+      font-size: 18px;
+      line-height: 23px;
+    }
+    @media screen and (min-width: 600px) {
+      font-size: 22px;
+      line-height: 26px;
+    }
+    @media screen and (min-width: 990px) {
+      display: none;
+    }
+  }
+  .slick-current &__item-name {
+    opacity: 1;
   }
 }
