--- a/dev/scss/frames/_categories.scss
+++ b/dev/scss/frames/_categories.scss
@@ -1,7 +1,10 @@
 .categories {
   &__cover {
     padding-top: 40px;
-    padding-bottom: 25px;
+    padding-bottom: 16px;
+    @media screen and (min-width: 990px) {
+      padding-bottom: 25px;
+    }
     @media screen and (min-width: 1200px) {
       padding-bottom: 16px;
     }
@@ -10,8 +13,14 @@
     display: flex;
     flex-wrap: wrap;
     position: relative;
-    margin: 0 -15px 0 0;
-    min-height: 195px;
+    margin: 0;
+    justify-content: center;
+    @media screen and (min-width: 480px) {
+      margin-right: -24px;
+    }
+    @media screen and (min-width: 990px) {
+      margin-right: -15px;
+    }
     @media screen and (min-width: 1200px) {
       margin-right: -24px;
     }
@@ -19,9 +28,20 @@
   &__item {
     flex: 0 0 auto;
     display: flex;
-    width: 20%;
-    padding-right: 15px;
-    padding-bottom: 15px;
+    width: 100%;
+    padding-bottom: 24px;
+    @media screen and (min-width: 480px) {
+      width: 50%;
+      padding-right: 24px;
+    }
+    @media screen and (min-width: 768px) {
+      width: (100% / 3);
+    }
+    @media screen and (min-width: 990px) {
+      width: 20%;
+      padding-right: 15px;
+      padding-bottom: 15px;
+    }
     @media screen and (min-width: 1200px) {
       padding-right: 24px;
       padding-bottom: 24px;
@@ -45,13 +65,18 @@
     justify-content: center;
     align-items: center;
     font-weight: $medium;
-    font-size: 12px;
-    line-height: 17px;
+    font-size: 14px;
+    line-height: 18px;
     text-transform: uppercase;
     color: $color-blue;
     text-align: center;
     flex: 1 0 auto;
     padding: 10px;
+    min-height: 115px;
+    @media screen and (min-width: 990px) {
+      font-size: 12px;
+      line-height: 17px;
+    }
     @media screen and (min-width: 1200px) {
       font-size: 14px;
       line-height: 18px;
