--- a/dev/scss/frames/_rule.making.scss
+++ b/dev/scss/frames/_rule.making.scss
@@ -1,21 +1,34 @@
 .rule-making {
   background: #F4F4F4;
   &__cover {
-    padding-top: 47px;
-    padding-bottom: 25px;
+    padding-top: 60px;
+    padding-bottom: 35px;
+    @media screen and (min-width: 990px) {
+      padding-top: 47px;
+    }
     @media screen and (min-width: 1200px) {
       padding-bottom: 0;
     }
   }
   &__heading {
-    margin: 0 0 34px;
+    margin: 0 0 25px;
+    @media screen and (min-width: 990px) {
+      margin-bottom: 34px;
+    }
   }
   &__description {
-    margin: 0 0 50px 50px;
-    width: 420px;
-    font-size: 24px;
-    line-height: 31px;
+    margin: 0 0 50px 0;
     color: #31393D;
+    text-align: center;
+    @media screen and (min-width: 600px) {
+      font-size: 24px;
+      line-height: 31px;
+    }
+    @media screen and (min-width: 990px) {
+      width: 420px;
+      margin-left: 50px;
+      text-align: left;
+    }
   }
   &__list {
     display: flex;
@@ -23,13 +36,19 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    margin: 0 -40px;
+    margin: 0 -30px;
+    @media screen and (min-width: 990px) {
+      margin: 0 -40px;
+    }
     @media screen and (min-width: 1200px) {
       margin: 0 -65px;
     }
   }
   &__item {
-    padding: 0 40px 40px;
+    padding: 0 30px 30px;
+    @media screen and (min-width: 990px) {
+      padding: 0 40px 40px;
+    }
     @media screen and (min-width: 1200px) {
       padding: 0 65px 65px;
     }
