Page it projects templatestatus

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -25,3 +25,6 @@
 @import './frames/rule.making';
 @import './frames/partners';
 @import './frames/footer';
+@import './frames/page.heading';
+@import './frames/breadcrumbs';
+@import './frames/content.projects';
