Diagnostics center page

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -14,6 +14,9 @@
 @import './main.nav';
 @import './modal';
 @import './form';
+@import './video.carousel';
+@import './video';
+@import './video.names';
 
 @import './frames/wrapper';
 @import './frames/header';
@@ -28,3 +31,9 @@
 @import './frames/page.heading';
 @import './frames/breadcrumbs';
 @import './frames/content.projects';
+@import './frames/content.diagnostics';
+@import './frames/map';
+@import './frames/about.info';
+@import './frames/advantages';
+@import './frames/description';
+@import './frames/video.content';
