--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -37,3 +37,9 @@
 @import './frames/advantages';
 @import './frames/description';
 @import './frames/video.content';
+@import './frames/content.about';
+@import './frames/gallery';
+@import './frames/directions';
+@import './frames/strategic.partners';
+@import './frames/statistics';
+@import './frames/prospects';
