--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -43,3 +43,11 @@
 @import './frames/strategic.partners';
 @import './frames/statistics';
 @import './frames/prospects';
+@import './frames/content.investments';
+@import './frames/investments.title';
+@import './frames/sum';
+@import './frames/investment.direction';
+@import './frames/countries';
+@import './frames/future.goals';
+@import './frames/centers';
+@import './frames/investments.statistics';
