Realization of pages education, investment, partnership, oncology

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -17,6 +17,7 @@
 @import './video.carousel';
 @import './video';
 @import './video.names';
+@import './text';
 
 @import './frames/wrapper';
 @import './frames/header';
@@ -51,3 +52,10 @@
 @import './frames/future.goals';
 @import './frames/centers';
 @import './frames/investments.statistics';
+@import './frames/content.oncology';
+@import './frames/health.care';
+@import './frames/sub.advantages';
+@import './frames/sub.partners';
+@import './frames/partnership';
+@import './frames/content.education';
+@import './frames/kinds';
