add nginx, new page map

--- a/dev/include/header.html
+++ b/dev/include/header.html
@@ -27,7 +27,7 @@
       <div class="header__contacts">
         <!-- (call) -->
         <div class="call header__call">
-          <a href="javascript:;" data-fancybox data-src="#call" class="call__link">
+          <a href="javascript:;" data-fancybox data-src="#call_ok" class="call__link">
             <svg class="call__icon">
               <use xlink:href="images/icons-sprite.svg#icon-mail"></use>
             </svg>
