--- a/dev/include/modals.html
+++ b/dev/include/modals.html
@@ -4,10 +4,10 @@
   <div class="form">
     <form action="#" name="form" method="POST">
       <div class="form__fields">
-        <div class="form__field form__field_success">
+        <div class="form__field">
           <div class="form__label">Имя</div>
           <div class="form__field-wrapper">
-            <input type="text" name="name" value="Дмитрий" placeholder="" class="form__input">
+            <input type="text" name="name" value="" placeholder="" class="form__input">
           </div>
         </div>
         <div class="form__field">
@@ -25,6 +25,18 @@
       </div>
       <input type="submit" name="submit" value="Отправить" class="form__submit">
     </form>
+  </div>
+</div>
+<!-- End (modal) -->
+<!-- (modal) -->
+<div class="modal" id="call_ok">
+  <div class="form form__message">
+    <h4 class="modal__title">Анкета успешно отправлена!</h4>
+    <div class="form__icon">
+      <svg class="form__icon__svg" width="61" height="58" viewBox="0 0 61 58" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M4 36.5714L21.3333 50L56 3" stroke="#6ED685" stroke-width="10"/>
+      </svg>
+    </div>
   </div>
 </div>
 <!-- End (modal) -->
