--- a/dev/scss/frames/_health.care.scss
+++ b/dev/scss/frames/_health.care.scss
@@ -1,4 +1,8 @@
 .health-care {
+  display: none;
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
   &__cover {
     padding-bottom: 45px;
     @media screen and (min-width: 990px) {
