--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -20,7 +20,8 @@
 @import './text';
 @import './big.doctor';
 @import './card.new';
-
+@import './content.nav';
+@import './map';
 @import './frames/wrapper';
 @import './frames/header';
 @import './frames/slider';
