--- a/dev/scss/utilities/_variables.scss
+++ b/dev/scss/utilities/_variables.scss
@@ -6,6 +6,7 @@ $bold: 700;
 
 $color-white: #FFFFFF;
 $color-black: #000000;
+$color-darkblue: #223359;
 $color-blue: #091C47;
 $color-gray: #F4F4F4;
 $color-light: #33ACEF;
