--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -34,6 +34,8 @@
 @import './frames/footer';
 @import './frames/page.heading';
 @import './frames/breadcrumbs';
+@import './frames/content.numbers';
+@import './frames/content.clinic';
 @import './frames/content.projects';
 @import './frames/content.diagnostics';
 @import './frames/map';
